--- a/src/lib/components/controls/navigationBar/NavigationBarItem.scss
+++ b/src/lib/components/controls/navigationBar/NavigationBarItem.scss
@@ -5,33 +5,29 @@
   display: flex;
 
   button.jse-navigation-bar-button {
-    font-family: $font-family-mono;
-    font-size: $font-size-mono;
+    font-family: inherit;
+    font-size: inherit;
     padding: $padding-half 2px;
     border: none;
     background: transparent;
-    color: $dark-gray;
+    color: inherit;
     cursor: pointer;
     outline: none;
-    min-width: 24px;
+    min-width: 2em;
     white-space: nowrap;
 
     &:focus,
     &:hover {
-      background: darken($very-light-gray, 10%);
+      background: var(--jse-panel-button-background-highlight);
+      color: var(--jse-panel-button-color-highlight);
     }
 
     &.jse-navigation-bar-arrow {
-      // TODO: fix the height of the buttons for real, this is an ugly
-      //  trick to make the buttons have the same height.
-      //  when there is no selection, the navigation bar must have the same
-      //  height as when there is a selection
-      font-size: $font-size-mono - 8px;
-      line-height: $font-size-mono - 8px;
-      padding: $padding-half $padding;
+      padding: 2px $padding 0;
 
-      &.open {
-        background: $white;
+      &.jse-open {
+        background: var(--jse-navigation-bar-background);
+        color: var(--jse-navigation-bar-dropdown-color);
       }
     }
   }
