--- a/src/lib/components/modals/CopyPasteModal.scss
+++ b/src/lib/components/modals/CopyPasteModal.scss
@@ -1,17 +1,17 @@
 @import '../../styles';
 @import 'Modal';
 
-.jsoneditor-modal.copy-paste {
-  .shortcuts {
+.jse-modal.jse-copy-paste {
+  .jse-shortcuts {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 2 * $padding 0;
+    margin: $padding-double 0;
 
-    .shortcut {
-      .key {
+    .jse-shortcut {
+      .jse-key {
         font-size: 200%;
-        color: $theme-color;
+        color: var(--jse-theme-color);
       }
     }
   }
