--- a/src/lib/components/JSONEditor.scss
+++ b/src/lib/components/JSONEditor.scss
@@ -1,17 +1,19 @@
+@import '../themes/jse-theme-default'; // do not put the .css extension here, else the file will not be bundled
 @import '../styles';
-@import 'modes/treemode/json-node-selected-mixin.scss';
+@import 'modes/treemode/json-node-selected-mixin';
 
-.jsoneditor-main {
+.jse-main {
   width: 100%;
   height: 100%;
   min-width: 0;
-  min-height: 150px;
-  border: 1px solid $theme-color;
+  min-height: $contents-min-height;
+  font-family: var(--jse-font-family);
+  font-size: var(--jse-font-size);
+  line-height: normal;
   position: relative;
   display: flex;
   flex-direction: row;
 
-  &.focus {
-    box-shadow: $outline-shadow;
+  &.jse-focus {
   }
 }
