--- a/src/lib/components/modals/SortModal.scss
+++ b/src/lib/components/modals/SortModal.scss
@@ -1,8 +1,8 @@
 @import '../../styles';
 @import 'Modal';
 
-.jsoneditor-modal.sort {
-  .contents {
+.jse-modal.jse-sort {
+  .jse-contents {
   }
 
   table {
@@ -17,19 +17,20 @@
       font-weight: normal;
       padding-bottom: $padding;
 
-      input.path {
+      input.jse-path {
         width: 100%;
         box-sizing: border-box;
         padding: 6px 16px; // TODO: define variables for those props
-        border: 1px solid $border-gray;
-        border-radius: $border-radius;
-        font-family: $font-family;
-        font-size: $font-size;
-        color: $black;
+        border: var(--jse-input-border);
+        border-radius: var(--jse-input-radius);
+        font-family: inherit;
+        font-size: inherit;
+        background: inherit;
+        color: inherit;
         outline: none;
 
         &:read-only {
-          border: 1px solid $background-gray;
+          background: var(--jse-input-background-readonly);
         }
       }
 
@@ -39,7 +40,7 @@
     }
   }
 
-  .space {
+  .jse-space {
     height: 200px; // Trick for the property select box dropdown to be fully visible
   }
 }
