--- a/src/lib/components/modes/codemode/menu/CodeMenu.scss
+++ b/src/lib/components/modes/codemode/menu/CodeMenu.scss
@@ -1,11 +1,11 @@
 @import '../../../../styles';
 
-.powered-by {
+.jse-powered-by {
   font-size: 8pt;
   padding: 0 10px 3px;
 
   a {
-    color: $white;
+    color: inherit;
     opacity: 0.7;
 
     &:hover {
