--- a/src/lib/components/modes/treemode/JSONKey.scss
+++ b/src/lib/components/modes/treemode/JSONKey.scss
@@ -1,36 +1,35 @@
 @import '../../../styles';
 
-.key {
+.jse-key {
   display: inline-block;
-  line-height: $line-height;
-  min-width: 16px;
-  min-height: $line-height;
+  min-width: 2em;
   padding: 0 $input-padding;
   box-sizing: border-box;
   outline: none;
   border-radius: 1px;
   vertical-align: top;
+  color: var(--jse-key-color);
 
   word-break: normal;
   overflow-wrap: normal; // not anywhere as for JSONValue
   white-space: pre-wrap; // important for rendering multiple consecutive spaces
 
   &:hover {
-    background: $hovered-background-transparent;
+    background: var(--jse-hover-background-color);
   }
 
   &:hover {
-    background: $hovered-background-transparent;
+    background: var(--jse-hover-background-color);
   }
 
-  &.empty {
+  &.jse-empty {
     min-width: 3em;
-    outline: 1px dotted $light-gray-transparent;
+    outline: 1px dotted var(--jse-tag-background);
     -moz-outline-radius: 2px;
 
     &::after {
       pointer-events: none;
-      color: $light-gray-transparent;
+      color: var(--jse-tag-background);
       content: 'key';
     }
   }
