--- a/src/lib/components/modes/treemode/TreeMode.scss
+++ b/src/lib/components/modes/treemode/TreeMode.scss
@@ -1,29 +1,26 @@
 @import '../../../styles';
 
-.tree-mode {
+.jse-tree-mode {
   flex: 1;
   display: flex;
   flex-direction: column;
   position: relative;
-  background: $white;
+  background: var(--jse-background-color);
   min-width: 0;
   min-height: 0;
+  font-family: var(--jse-font-family-mono);
+  font-size: var(--jse-font-size-mono);
+  color: var(--jse-text-color);
+  line-height: var(--jse-line-height);
 
-  &:not(.visible) {
-    visibility: hidden;
-    height: 0;
-    width: 0;
-    flex: unset;
-  }
-
-  .hidden-input-label {
+  .jse-hidden-input-label {
     position: absolute;
     right: 0;
     top: 0;
     width: 0;
     height: 0;
 
-    .hidden-input {
+    .jse-hidden-input {
       width: 0;
       height: 0;
       padding: 0;
@@ -32,45 +29,54 @@
     }
   }
 
-  .search-box-container {
+  .jse-search-box-container {
     position: relative;
     height: 0;
     top: $padding;
-    margin-right: $padding + 20px;
+    margin-right: calc(var(--jse-padding) + 20px);
     margin-left: $padding;
     text-align: right;
     z-index: 3; // must be above the ContextMenuButton
   }
 
-  .contents {
+  &.no-main-menu {
+    border-top: var(--jse-main-border);
+  }
+
+  .jse-contents {
+    border-left: var(--jse-main-border);
+    border-right: var(--jse-main-border);
+
+    &:last-child {
+      border-bottom: var(--jse-main-border);
+    }
+
     flex: 1;
     overflow: auto;
-    background: $contents-background;
     position: relative;
     padding: $contents-padding;
     display: flex;
     flex-direction: column;
 
-    .loading-space {
+    .jse-loading-space {
       flex: 1;
     }
 
-    .loading {
+    .jse-loading {
       flex: 2;
       text-align: center;
-      color: $gray;
+      color: var(--jse-panel-color-readonly);
       box-sizing: border-box;
+      font-family: var(--jse-font-family);
+      font-size: var(--jse-font-size);
     }
   }
 
-  .preview {
+  .jse-preview {
     flex: 1;
-    color: $gray;
+    color: var(--jse-panel-color-readonly);
     overflow: auto;
     white-space: pre-wrap;
-    font-family: $font-family-mono;
-    font-size: $font-size-mono;
-    line-height: $font-size-mono + 4px;
     padding: 2px;
   }
 }
