--- a/src/lib/components/modes/treemode/contextmenu/ContextMenuButton.scss
+++ b/src/lib/components/modes/treemode/contextmenu/ContextMenuButton.scss
@@ -1,30 +1,25 @@
 @import '../../../../styles';
 
-.context-menu-button {
-  $context-menu-button-size-half: 0.5 * $context-menu-button-size;
-
+.jse-context-menu-button {
   position: absolute;
-  top: -$context-menu-button-size-half;
-  right: -$context-menu-button-size-half;
-  width: $context-menu-button-size;
-  height: $context-menu-button-size;
+  top: calc(-0.5 * var(--jse-context-menu-button-size));
+  right: calc(-0.5 * var(--jse-context-menu-button-size));
+  width: var(--jse-context-menu-button-size);
+  height: var(--jse-context-menu-button-size);
   padding: 0;
   margin: 0;
   z-index: 2;
 
   cursor: pointer;
   background: transparent;
-  font-size: $font-size-mono;
-  line-height: $line-height;
 
-  background: $dark-gray;
-  color: $white;
-  border: none;
   border-radius: 2px;
-  box-shadow: $box-shadow;
+  background: var(--jse-context-menu-button-background);
+  color: var(--jse-context-menu-button-color);
+  border: none;
+  box-shadow: var(--jse-controls-box-shadow);
 
   &:hover {
-    background: lighten($dark-gray, 10%);
-    color: $white;
+    background: var(--jse-context-menu-button-background-highlight);
   }
 }
