--- a/src/lib/plugins/value/components/EnumValue.scss
+++ b/src/lib/plugins/value/components/EnumValue.scss
@@ -2,28 +2,28 @@
 @import '../../../components/controls/EditableDivShared';
 
 .jse-enum-value {
-  background: $hovered-background-transparent;
+  background: var(--jse-hover-background-color);
   border: none;
   padding: 0;
 
-  font-family: $font-family-mono;
-  font-size: $font-size-mono;
+  font-family: inherit;
+  font-size: inherit;
 
   cursor: pointer;
   outline: none;
 
-  &.selected {
-    background: $selection-background;
-    color: $selection-color;
+  &.jse-selected {
+    background: var(--jse-selection-background-color);
+    color: inherit;
   }
 
-  &.value:focus {
+  &.jse-value:focus {
     // override the color to black when editing
-    color: $black;
+    color: var(--jse-text-color);
   }
 }
 
-:global(.json-node.selected) {
+:global(.jse-json-node.jse-selected) {
   .jse-enum-value {
     background: transparent;
   }
