--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -1,58 +1,3 @@
-$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
-  'Helvetica Neue', sans-serif;
-// "consolas" for Windows, "menlo" for Mac with fallback to "monaco", 'Ubuntu Mono' for Ubuntu
-// (at Mac this font looks too large at 14px, but 13px is too small for the font on Windows)
-$font-family-mono: consolas, menlo, monaco, 'Ubuntu Mono', 'source-code-pro', monospace !default;
-$font-size-mono: 14px;
-$font-size: 16px;
-$font-size-small: 13px;
-$font-size-smallest: 11px;
-
-$white: #fff;
-$black: #1a1a1a;
-$red: #ee5341;
-$green: #9ac45d;
-$contentsMinHeight: 150px;
-$theme-color: #3883fa;
-$theme-color-light: lighten($theme-color, 5%);
-$floating-menu-background: #4d4d4d;
-$floating-menu-color: #fff;
-$selected-color: #ffe665;
-$highlight-color: #ffe665;
-$highlight-hover-color: #f0f000;
-$highlight-active-color: #ffd700;
-$highlight-active-hover-color: #f3cd00;
-$warning-color: #fdc539;
-$error-background-color: #ffef8b;
-$error-border-color: #ffd700;
-$dark-gray: #656565;
-$gray: rgb(157, 157, 157); // #9d9d9d
-$gray-transparent: rgba(0, 0, 0, 0.38); // #9d9d9d but with transparency
-$middle-gray: #d3d3d3; // #d3d3d3
-$light-gray: rgb(192, 192, 192);
-$very-light-gray: #ebebeb;
-$light-gray-transparent: rgba(0, 0, 0, 0.25);
-
-$value-color-string: #008000;
-$value-color-number: #ee422e;
-$value-color-boolean: #ff8c00;
-$value-color-null: #004ed0;
-$value-color-url: $value-color-string;
-
-$contents-background: $white;
-$selection-background: $middle-gray;
-$selection-color: $black;
-$hovered-background: rgb(240, 240, 240); // #f0f0f0
-$hovered-background-transparent: rgba(0, 0, 0, 0.06); // #f0f0f0, with transparency
-$background-gray: #f5f5f5;
-$background-light-gray-transparent: rgba(0, 0, 0, 0.06);
-$border-gray: #d8dbdf;
-$meta-color: $gray-transparent;
-$edit-border-color: $dark-gray;
-
-$line-height: 18px;
-$indentation-width: 18px; // IMPORTANT: keep in sync with js constant INDENTATION_WIDTH
-$menu-button-size: 32px;
 $pressed-button-margin: 2px;
 $input-padding: 5px;
 $search-box-offset: 10px;
@@ -60,25 +5,22 @@ $navigation-bar-height: 27px; // TODO: having this hardcoded is ugly
 $search-box-offset-navigation-bar: $search-box-offset + $navigation-bar-height;
 $border-radius: 3px;
 
-$padding: 10px;
-$padding-half: 0.5 * $padding;
+$padding: var(--jse-padding);
+$padding-half: calc(0.5 * var(--jse-padding));
+$padding-double: calc(2 * var(--jse-padding));
 $menu-padding: 5px;
 $bottom-height: 5px;
 $contents-padding: 2px;
-
-$context-menu-button-size: 18px;
+$contents-min-height: 150px;
 $errors-overview-max-height: 25%;
-
-$box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.24);
-$outline-shadow: 0 0 10px 0 rgba(56, 131, 250, 0.8);
 
 @mixin jsoneditor-button {
   border: none;
   background: transparent;
   color: inherit;
   cursor: pointer;
-  font-family: $font-family;
-  font-size: $font-size;
+  font-family: var(--jse-font-family);
+  font-size: var(--jse-font-size);
   padding: $menu-padding;
   margin: 0;
 }
@@ -86,16 +28,16 @@ $outline-shadow: 0 0 10px 0 rgba(56, 131, 250, 0.8);
 @mixin jsoneditor-button-primary {
   @include jsoneditor-button;
 
-  background: $theme-color;
-  color: $white;
-  padding: $padding 2 * $padding;
+  background: var(--jse-button-primary-background);
+  color: var(--jse-button-primary-color);
+  padding: $padding $padding-double;
   border-radius: $border-radius;
 
   &:hover {
-    background: lighten($theme-color, 7%);
+    background: var(--jse-button-primary-background-highlight);
   }
 
   &:disabled {
-    background: $gray;
+    background: var(--jse-button-primary-background-disabled);
   }
 }
