--- a/src/lib/components/modes/treemode/Welcome.scss
+++ b/src/lib/components/modes/treemode/Welcome.scss
@@ -10,6 +10,13 @@
   flex-direction: column;
   align-items: center;
 
+  border-left: var(--jse-main-border);
+  border-right: var(--jse-main-border);
+
+  &:last-child {
+    border-bottom: var(--jse-main-border);
+  }
+
   .jse-space.jse-before {
     flex: 1;
   }
